@@ -1,3 +1,6 @@
+- drakboot:
+  o fix .old backup for grub2's grub.cfg
+
 Version 17.52 - 17 July 2016
 
 - drakboot:
